# Enform

./: AUTHORS  README  configure.ac
config/: Makefile.am
config/default/: e.src  module.ibox.src  profile.desktop
data/backgrounds/: Black_Tree.edj  Brushed_Metal.edj  Cracked_Earth.edj  Desert_Sky.edj  Eager_Amiga.edj  Eiffel_Trifle.edj  Eupotamic_Bloat.edj  Evening.edj  Gray_Day.edj  Makefile.am  Raspberry_Pride.edj
data/icons/: Makefile.am
data/themes/: Makefile.am  default.edc  default.edj  detourious.edj  efenniht.edj
data/themes/default/: blingbling.edc  blingbling.edj  default_about.edc  default_background.edc  default_clock.edc  default_comp.edc  default_desklock.edc  default_entry.edc  default_icons.edc  default_taskbar.edc
src/: Makefile.am
src/extra/src/: checkpasswd.c
src/modules/: Makefile.am  Makefile_battery.am  Makefile_mixer.am
src/modules/battery/: batget.c  e_mod_config.c  e_mod_main.c  e_mod_main.h  e_mod_openbsd.c
src/modules/clock/: e-module-clock.edj
src/modules/conf_applications/: e_int_config_apps.c  e_mod_main.c
src/modules/conf_theme/: e_int_config_theme.c  e_mod_main.c
src/modules/cpufreq/: e-module-cpufreq.edj  e_mod_main.c  freqset.c
src/modules/ibox/: e_mod_main.c
src/modules/mixer/: e-module-mixer.edj  e_mod_main.c  e_mod_main.h  sys_alsa.c  sys_openbsd.c  sys_pulse.c
src/modules/pager/: e_mod_main.c
src/modules/start/: e-module-start.edj
src/modules/tasks/: e_mod_main.c
src/modules/temperature/: e_mod_main.c  tempget.c
