MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enform/data/backgrounds
files_DATA = \
Black_Tree.edj \
Cracked_Earth.edj \
Desert_Sky.edj \
Edinburgh_Nights.edj \
Evening.edj \
Eager_Amiga.edj \
Eiffel_Trifle.edj \
Eupotamic_Bloat.edj \
Raspberry_Pride.edj \
Sabana_Night.edj \
Gray_Day.edj
 

EXTRA_DIST = $(files_DATA)
